fix wrap

--- a/css/wrap.css
+++ b/css/wrap.css
@@ -190,6 +190,9 @@
     font-size: 13px;
     margin-top: 10px;
     z-index: 3;
+    position: absolute;
+    left: 0;
+    top: 0;
 } 
 
 .prod_list li .img{
@@ -240,6 +243,7 @@
     top: 0;
     left: 0;
     display: none;
+    z-index: 3;
 }
 
 .prod_list li:hover .g_bg{
